--- a/form-generator/rendering/entry.html
+++ b/form-generator/rendering/entry.html
@@ -5,4 +5,7 @@
 {{ composite_property(property, disabled=disabled, copy=copy) }}
 {%- else %}
     {{- input_field(property, disabled=disabled, required=required, copy=copy) }}
+    {%- if "datatype" in property and property["datatype"] == URIs["BOOLEAN"] and "hasValue" not in property %}
+        {{- input_field(property, disabled=disabled, required=required, copy=copy, checkbox_unchecked=True) }}
+    {% endif %}
 {%- endif %}
