--- a/form-generator/rendering/input_field.html
+++ b/form-generator/rendering/input_field.html
@@ -1,71 +1,75 @@
-{%- if "hasValue" in property %}
-{{ property["hasValue"] }}
+{%- if 'hasValue' in property %}
+{{ property['hasValue'] }}
 {%- endif %}
-{%- if "in" in property %}
-<select name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" data-property-id="{{ property["id"] }}" data-label="{{ property["name"] }}"
+{%- if 'in' in property %}
+<select name='{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}' data-property-id='{{ property["id"] }}' data-label='{{ property["name"] }}'
     {%- if disabled==True %} disabled{% endif %}
-    {%- if "equals" in property %} data-equalTo="{{ property["equals"] }}"{% endif %}
-    {%- if "disjoint" in property %} data-notEqualTo="{{ property["disjoint"] }}"{% endif %}
-    {%- if "lessThan" in property %} lessThan="{{ property["lessThan"] }}"{% endif %}
-    {%- if "lessThanOrEquals" in property %} data-lessThanEqual="{{ property["lessThanOrEquals"] }}"{% endif %}
-    {%- if "hasValue" in property %} hidden><option value="{{ property["hasValue"] }}" selected>{{ property["hasValue"] }}</option>
+    {%- if 'equals' in property %} data-equalTo='{{ property['equals'] }}'{% endif %}
+    {%- if 'disjoint' in property %} data-notEqualTo='{{ property['disjoint'] }}'{% endif %}
+    {%- if 'lessThan' in property %} lessThan='{{ property['lessThan'] }}'{% endif %}
+    {%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property['lessThanOrEquals'] }}'{% endif %}
+    {%- if 'hasValue' in property %} hidden><option value='{{ property["hasValue"] }}' selected>{{ property["hasValue"] }}</option>
     {%- else %}>
-        {%- for option in property["in"] %}<option value="{{ option }}"
-            {%- if "defaultValue" in property and property["defaultValue"] == option %} selected{% endif %}>
+        {%- for option in property['in'] %}<option value='{{ option }}'
+            {%- if 'defaultValue' in property and property['defaultValue'] == option %} selected{% endif %}>
             {{- option }}</option>
         {%- endfor %}
     {%- endif %}</select><br />
 {%- else %}
-<input data-property-id="{{ property["id"] }}" name="{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}" data-label="{{ property["name"] }}"
-{%- if property["path"] == URIs["EMAIL"] %} type="email"
+<input data-property-id='{% if checkbox_unchecked == True %}unchecked:{% endif %}{{ property["id"] }}' name='{% if checkbox_unchecked == True %}unchecked:{% endif %}{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}' data-label='{{ property["name"] }}'
+{%- if property['path'] == URIs['EMAIL'] %} type='email'
     {%- if required==True %} required{% endif %}
-    {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
-    {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
-    {%- else %} value=""
+    {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+    {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+    {%- else %} value=''
     {%- endif %}
-{%- elif property["path"] == URIs["PHONE_NUMBER"] %} type="tel"
+{%- elif property['path'] == URIs['PHONE_NUMBER'] %} type='tel'
     {%- if required==True %} required{% endif %}
-    {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
-    {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
-    {%- else %} value=""
+    {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+    {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+    {%- else %} value=''
     {%- endif %}
-{%- elif "datatype" in property %}
-    {%- if property["datatype"] in URIs["NUMBER"] %} type="number"
+{%- elif 'datatype' in property %}
+    {%- if property['datatype'] in URIs['NUMBER'] %} type='number'
         {%- if required==True %} required{% endif %}
-        {%- if "min" in property %} min="{{ property["min"] }}"{% endif %}
-        {%- if "max" in property %} max="{{ property["max"] }}"{% endif %}
-        {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
-        {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
-        {%- else %} value=""
+        {%- if 'min' in property %} min='{{ property["min"] }}'{% endif %}
+        {%- if 'max' in property %} max='{{ property["max"] }}'{% endif %}
+        {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+        {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+        {%- else %} value=''
         {%- endif %}
-    {%- elif property["datatype"] == URIs["DATE"] %} type="date"
+    {%- elif property['datatype'] == URIs['DATE'] %} type='date'
         {%- if required==True %} required{% endif %}
-        {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
-        {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
-        {%- else %} value=""
+        {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+        {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+        {%- else %} value=''
         {%- endif %}
-    {%- elif property["datatype"] == URIs["TIME"] %} type="time"
+    {%- elif property['datatype'] == URIs['TIME'] %} type='time'
         {%- if required==True %} required{% endif %}
-        {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
-        {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
-        {%- else %} value=""
+        {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+        {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+        {%- else %} value=''
         {%- endif %}
-    {%- elif property["datatype"] == URIs["BOOLEAN"] %} type="checkbox"
-        {%- if "hasValue" in property and property["hasValue"] == True %} checked hidden
-        {%- elif "defaultValue" in property and property["defaultValue"] == True %} checked{%- endif %}
+    {%- elif property['datatype'] == URIs['BOOLEAN'] %} type='checkbox'
+        {%- if checkbox_unchecked == True %} hidden
+            {%- if 'defaultValue' not in property or property['defaultValue'] == False %} checked{%- endif %}
+        {%- else %}
+            {%- if 'hasValue' in property and property['hasValue'] == True %} checked hidden
+            {%- elif 'defaultValue' in property and property['defaultValue'] == True %} checked{%- endif %}
+        {%- endif %}
     {%- endif %}
-{%- else %} type="text"
+{%- else %} type='text'
     {%- if required==True %} required{% endif %}
-    {%- if "pattern" in property %} pattern="{{ property["pattern"] }}" title="Must match pattern: {{ property["pattern"] }}"{% endif %}
-    {%- if "hasValue" in property %} hidden value="{{ property["hasValue"] }}"
-    {%- elif "defaultValue" in property %} value="{{ property["defaultValue"] }}"
-    {%- else %} value=""{%- endif %}
+    {%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'{% endif %}
+    {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+    {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+    {%- else %} value=''{%- endif %}
 {%- endif %}
 {#- Stuff that applies no matter the type of input #}
-{%- if "maxLength" in property %} maxlength="{{ property["maxLength"] }}"{% endif %}
-{%- if "equals" in property %} data-equalTo="{{ property["equals"] }}"{% endif %}
-{%- if "disjoint" in property %} data-notEqualTo="{{ property["disjoint"] }}"{% endif %}
-{%- if "lessThan" in property %} lessThan="{{ property["lessThan"] }}"{% endif %}
-{%- if "lessThanOrEquals" in property %} data-lessThanEqual="{{ property["lessThanOrEquals"] }}"{% endif %}
+{%- if 'maxLength' in property %} maxlength='{{ property["maxLength"] }}'{% endif %}
+{%- if 'equals' in property %} data-equalTo='{{ property["equals"] }}'{% endif %}
+{%- if 'disjoint' in property %} data-notEqualTo='{{ property["disjoint"] }}'{% endif %}
+{%- if 'lessThan' in property %} lessThan='{{ property["lessThan"] }}'{% endif %}
+{%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property["lessThanOrEquals"] }}'{% endif %}
 {%- if disabled==True %} disabled{% endif %}/>
 {%- endif %}
