Reimplemented regex modifier flags in a better way Changed form id to something less likely to clash

--- a/form-generator/rendering/input_field.html
+++ b/form-generator/rendering/input_field.html
@@ -61,6 +61,7 @@
 {%- else %} type='text'
     {%- if required==True %} required{% endif %}
     {%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'{% endif %}
+    {%- if 'flags' in property %} flags='{{ property["flags"] }}'{% endif %}
     {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
     {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
     {%- else %} value=''{%- endif %}
