--- a/form-generator/rendering/input_field.html
+++ b/form-generator/rendering/input_field.html
@@ -1,76 +1,105 @@
-{%- if 'hasValue' in property %}
-{{ property['hasValue'] }}
-{%- endif %}
 {%- if 'in' in property %}
-<select name='{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}' data-property-id='{{ property["id"] }}' data-label='{{ property["name"] }}'
-    {%- if disabled==True %} disabled{% endif %}
-    {%- if 'equals' in property %} data-equalTo='{{ property['equals'] }}'{% endif %}
-    {%- if 'disjoint' in property %} data-notEqualTo='{{ property['disjoint'] }}'{% endif %}
-    {%- if 'lessThan' in property %} lessThan='{{ property['lessThan'] }}'{% endif %}
-    {%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property['lessThanOrEquals'] }}'{% endif %}
+<select name='{{ property["id"] }}
+    {%- if copy is not none %}-{{ copy }}
+    {%- endif %}' data-property-id='{{ property["id"] }}' data-label='{{ property["name"] }}'
+    {%- if disabled==True %} disabled
+    {%- endif %}
+    {%- if 'equals' in property %} data-equalTo='{{ property["equals"] }}'
+    {%- endif %}
+    {%- if 'disjoint' in property %} data-notEqualTo='{{ property["disjoint"] }}'
+    {%- endif %}
+    {%- if 'lessThan' in property %} lessThan='{{ property["lessThan"] }}'
+    {%- endif %}
+    {%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property["lessThanOrEquals"] }}'
+    {%- endif %}>
     {%- if 'hasValue' in property %} hidden><option value='{{ property["hasValue"] }}' selected>{{ property["hasValue"] }}</option>
-    {%- else %}>
-        {%- for option in property['in'] %}<option value='{{ option }}'
-            {%- if 'defaultValue' in property and property['defaultValue'] == option %} selected{% endif %}>
+    {%- else %}
+        {%- for option in property['in'] %}
+        <option value='{{ option }}'
+            {%- if 'defaultValue' in property and property['defaultValue'] == option %} selected
+            {%- endif %}>
             {{- option }}</option>
         {%- endfor %}
-    {%- endif %}</select><br />
+    {%- endif %}
+</select>
 {%- else %}
-<input data-property-id='{% if checkbox_unchecked == True %}unchecked:{% endif %}{{ property["id"] }}' name='{% if checkbox_unchecked == True %}unchecked:{% endif %}{{ property["id"] }}{% if copy is not none %}-{{ copy }}{% endif %}' data-label='{{ property["name"] }}'
-{%- if property['path'] == URIs['EMAIL'] %} type='email'
-    {%- if required==True %} required{% endif %}
-    {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
-    {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
-    {%- else %} value=''
+<input data-property-id='
+    {%- if checkbox_unchecked == True %}unchecked:{{ property["id"] }}' name='unchecked:{{ property["id"] }}
+    {%- else %}{{ property["id"] }}' name='{{property["id"] }}
     {%- endif %}
-{%- elif property['path'] == URIs['PHONE_NUMBER'] %} type='tel'
-    {%- if required==True %} required{% endif %}
-    {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
-    {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
-    {%- else %} value=''
-    {%- endif %}
-{%- elif 'datatype' in property and not URIs['STRING'] == property['datatype'] %}
-    {%- if property['datatype'] in URIs['NUMBER'] %} type='number'
-        {%- if required==True %} required{% endif %}
-        {%- if 'min' in property %} min='{{ property["min"] }}'{% endif %}
-        {%- if 'max' in property %} max='{{ property["max"] }}'{% endif %}
+    {%- if copy is not none %}-{{ copy }}
+    {%- endif %}' data-label='{{ property["name"] }}'
+    {%- if property['path'] == URIs['EMAIL'] %} type='email'
+        {%- if required==True %} required
+        {%- endif %}
         {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
         {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
         {%- else %} value=''
         {%- endif %}
-    {%- elif property['datatype'] == URIs['DATE'] %} type='date'
-        {%- if required==True %} required{% endif %}
+    {%- elif property['path'] == URIs['PHONE_NUMBER'] %} type='tel'
+        {%- if required==True %} required
+        {%- endif %}
         {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
         {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
         {%- else %} value=''
         {%- endif %}
-    {%- elif property['datatype'] == URIs['TIME'] %} type='time'
-        {%- if required==True %} required{% endif %}
+    {%- elif 'datatype' in property and not URIs['STRING'] == property['datatype'] %}
+        {%- if property['datatype'] in URIs['NUMBER'] %} type='number'
+            {%- if required==True %} required{% endif %}
+            {%- if 'min' in property %} min='{{ property["min"] }}'
+            {%- endif %}
+            {%- if 'max' in property %} max='{{ property["max"] }}'
+            {%- endif %}
+            {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+            {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+            {%- else %} value=''
+            {%- endif %}
+        {%- elif property['datatype'] == URIs['DATE'] %} type='date'
+            {%- if required==True %} required
+            {%- endif %}
+            {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+            {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+            {%- else %} value=''
+            {%- endif %}
+        {%- elif property['datatype'] == URIs['TIME'] %} type='time'
+            {%- if required==True %} required
+            {%- endif %}
+            {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
+            {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
+            {%- else %} value=''
+            {%- endif %}
+        {%- elif property['datatype'] == URIs['BOOLEAN'] %} type='checkbox'
+            {%- if checkbox_unchecked == True %} hidden
+                {%- if 'defaultValue' not in property or property['defaultValue'] == False %} checked
+                {%- endif %}
+            {%- elif 'hasValue' in property and property['hasValue'] == True %} checked hidden
+            {%- elif 'defaultValue' in property and property['defaultValue'] == True %} checked
+            {%- endif %}
+        {%- endif %}
+    {%- else %} type='text'
+        {%- if required==True %} required
+        {%- endif %}
+        {%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'
+        {%- endif %}
+        {%- if 'flags' in property %} flags='{{ property["flags"] }}'
+        {%- endif %}
         {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
         {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
-        {%- else %} value=''
-        {%- endif %}
-    {%- elif property['datatype'] == URIs['BOOLEAN'] %} type='checkbox'
-        {%- if checkbox_unchecked == True %} hidden
-            {%- if 'defaultValue' not in property or property['defaultValue'] == False %} checked{%- endif %}
-        {%- else %}
-            {%- if 'hasValue' in property and property['hasValue'] == True %} checked hidden
-            {%- elif 'defaultValue' in property and property['defaultValue'] == True %} checked{%- endif %}
-        {%- endif %}
+        {%- else %} value=''{%- endif %}
     {%- endif %}
-{%- else %} type='text'
-    {%- if required==True %} required{% endif %}
-    {%- if 'pattern' in property %} pattern='{{ property["pattern"] }}' title='Must match pattern: {{ property["pattern"] }}'{% endif %}
-    {%- if 'flags' in property %} flags='{{ property["flags"] }}'{% endif %}
-    {%- if 'hasValue' in property %} hidden value='{{ property["hasValue"] }}'
-    {%- elif 'defaultValue' in property %} value='{{ property["defaultValue"] }}'
-    {%- else %} value=''{%- endif %}
-{%- endif %}
-{#- Stuff that applies no matter the type of input #}
-{%- if 'maxLength' in property %} maxlength='{{ property["maxLength"] }}'{% endif %}
-{%- if 'equals' in property %} data-equalTo='{{ property["equals"] }}'{% endif %}
-{%- if 'disjoint' in property %} data-notEqualTo='{{ property["disjoint"] }}'{% endif %}
-{%- if 'lessThan' in property %} lessThan='{{ property["lessThan"] }}'{% endif %}
-{%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property["lessThanOrEquals"] }}'{% endif %}
-{%- if disabled==True %} disabled{% endif %}/>
+    {#- Stuff that applies no matter the type of input #}
+    {%- if 'maxLength' in property %} maxlength='{{ property["maxLength"] }}'
+    {%- endif %}
+    {%- if 'equals' in property %} data-equalTo='{{ property["equals"] }}'
+    {%- endif %}
+    {%- if 'disjoint' in property %} data-notEqualTo='{{ property["disjoint"] }}'
+    {%- endif %}
+    {%- if 'lessThan' in property %} lessThan='{{ property["lessThan"] }}'
+    {%- endif %}
+    {%- if 'lessThanOrEquals' in property %} data-lessThanEqual='{{ property["lessThanOrEquals"] }}'
+    {%- endif %}
+    {%- if disabled==True %} disabled
+    {%- endif %}
+    {%- if hidden==True %} hidden
+    {%- endif %}/>
 {%- endif %}
