Fixed checkboxes with sh:hasValue constraint not having a partner checkbox Fixed an issue where input fields with sh:hasValue constraint had two 'hidden' attributes.

--- a/form-generator/rendering/entry.html
+++ b/form-generator/rendering/entry.html
@@ -5,7 +5,7 @@
 {{ composite_property(property, disabled=disabled, copy=copy) }}
 {%- else %}
     {{- input_field(property, disabled=disabled, hidden=hidden, required=required, copy=copy) }}
-    {%- if "datatype" in property and property["datatype"] == URIs["BOOLEAN"] and "hasValue" not in property %}
+    {%- if "datatype" in property and property["datatype"] == URIs["BOOLEAN"] %}
         {{- input_field(property, disabled=disabled, hidden=hidden, required=required, copy=copy, checkbox_unchecked=True) }}
     {%- endif %}
 {%- endif %}
