--- a/form-generator/rendering/property.html
+++ b/form-generator/rendering/property.html
@@ -2,38 +2,34 @@
 {%- include "input_field.html" %}
 {%- endmacro -%}
 {%- macro entry(property, disabled=False, hidden=False, required=False, copy=None) %}
-{%- include "entry.html" %}
+{%- include 'entry.html' %}
 {%- endmacro -%}
 
 {%- if 'hasValue' in property %}
 <div>
     {{- entry(property, hidden=True, copy=0)|indent(4) }}
 </div>    
-{%- elif "maxCount" not in property or property["maxCount"] > 0 %}
+{%- elif 'maxCount' not in property or property['maxCount'] > 0 %}
 <div>
-    <div><label>{{ property["name"] }}</label></div>
-    {%- if "description" in property %}
-    <div><i>{{ property["description"] }}</i></div>
+    <div><label>{{ property['name'] }}</label></div>
+    {%- if 'description' in property %}
+    <div><i>{{ property['description'] }}</i></div>
     {%- endif %}
-    {%- if "languageIn" in property %}<label><i>Language:
-        {%- for l in property["languageIn"] %} {{ l }}{{ "," if not loop.last }}{% endfor %}</i></label>
+    {%- if 'languageIn' in property %}<label><i>Language:
+        {%- for l in property['languageIn'] %} {{ l }}{{ ',' if not loop.last }}{% endfor %}</i></label>
     {%- endif %}
-    {%- if "maxCount" in property and property["maxCount"] == 1 and "minCount" in property and property["minCount"] == 1 %}
-        {{- entry(property, disabled=disabled, required=True, copy=0)|indent(4) }}
-    {%- else %}
-    <div>
-        <div class='template' hidden 
-            {%- if 'maxCount' in property %} data-max-entries='{{ property["maxCount"] }}'
-            {%- endif %}
-            {%- if 'minCount' in property %} data-min-entries='{{ property["minCount"] }}'
-            {%- endif %}>
-            <div>
-                {{- entry(property, disabled=True)|indent(16) }}
-            </div>
+    <div class='template' hidden
+    {%- if 'maxCount' in property %} data-max-entries='{{ property["maxCount"] }}'
+    {%- endif %}
+    {%- if 'minCount' in property %} data-min-entries='{{ property["minCount"] }}'
+    {%- endif %}>
+        <div>
+            {{- entry(property, disabled=True)|indent(8) }}
         </div>
-        <div class='entries'></div>
-        <button type='button' class='add-entry'>Add</button> <button type='button' disabled class='remove-entry'>Remove</button>
     </div>
+    <div class='entries'></div>
+    {%- if 'maxCount' not in property or property['maxCount'] != 1 or 'minCount' not in property or property['minCount'] != 1 %}
+    <button type='button' class='add-entry'>Add</button> <button type='button' disabled class='remove-entry'>Remove</button>
     {%- endif %}
 </div>
 {%- endif %}
